name:                rest-stringmap
version:             0.2.0.3
license:             BSD3
synopsis:            Maps with stringy keys that can be transcoded to JSON and XML.
description:         Maps with stringy keys that can be transcoded to JSON and XML.
author:              Silk B.V.
maintainer:          code@silk.co
copyright:           2014 Silk B.V.
category:            Silk
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  CHANGELOG.md
  LICENSE

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Rest.StringMap.HashMap.Lazy
    Rest.StringMap.HashMap.Strict
    Rest.StringMap.Map.Lazy
    Rest.StringMap.Map.Strict
    Rest.StringMap.Util
  build-depends:
      base >= 4.6 && < 4.9
    , aeson >= 0.7 && < 0.9
    , containers == 0.5.*
    , hashable == 1.2.*
    , hxt == 9.3.*
    , json-schema >= 0.6 && < 0.8
    , tagged >= 0.2 && < 0.9
    , text >= 0.10 && < 1.3
    , tostring >= 0.2.1 && < 0.3
    , unordered-containers == 0.2.*
