Name:             rest-types
Version:          1.8
Description:      Silk Rest Framework Types
Synopsis:         Silk Rest Framework Types
Maintainer:       code@silk.co
Category:         Web
Build-Type:       Simple
Cabal-Version:    >= 1.8
License:          OtherLicense

Library
  GHC-Options:     -Wall
  Hs-Source-Dirs:   src
  Build-Depends:

      base == 4.*
    , aeson >= 0.6 && < 0.8
    , bytestring >= 0.9 && < 0.11
    , containers >= 0.4 && < 0.6
    , generic-aeson == 0.1.*
    , hxt >= 9.2 && < 9.4
    , json-schema == 0.4.*
    , mtl >= 2.0 && < 2.2
    , regular == 0.3.*
    , regular-xmlpickler-typlab == 0.6.*
    , text == 0.11.*
    , tostring == 0.2.*
    , unordered-containers == 0.2.*
    , utf8-string == 0.3.*
    , uuid >= 1.2 && < 1.4

  Exposed-Modules: Rest.Types.Container
                   Rest.Types.Container.Resource
                   Rest.Types.Error
                   Rest.Types.ShowUrl

