name:                rest-types
version:             1.10.0.3
description:         Silk Rest Framework Types
synopsis:            Silk Rest Framework Types
maintainer:          code@silk.co
category:            Web
build-type:          Simple
cabal-version:       >= 1.8
license:             BSD3
license-file:        LICENSE

extra-source-files:
  CHANGELOG.md
  LICENSE

source-repository head
  type:              git
  location:          https://github.com/silkapp/rest.git

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Rest.Types.Container
    Rest.Types.Container.Resource
    Rest.Types.Error
    Rest.Types.ShowUrl
  build-depends:
      base == 4.*
    , aeson >= 0.7 && < 0.8
    , bytestring >= 0.9 && < 0.11
    , containers >= 0.4 && < 0.6
    , generic-aeson == 0.1.*
    , hxt >= 9.2 && < 9.4
    , json-schema == 0.5.*
    , mtl >= 2.0 && < 2.3
    , regular == 0.3.*
    , regular-xmlpickler == 0.2.*
    , rest-stringmap == 0.2.*
    , text >= 0.11 && < 1.2
    , unordered-containers == 0.2.*
    , utf8-string == 0.3.*
    , uuid >= 1.2 && < 1.4
