name:                rest-types
version:             1.14.1.1
description:         Silk Rest Framework Types
synopsis:            Silk Rest Framework Types
maintainer:          code@silk.co
category:            Web
build-type:          Simple
cabal-version:       >= 1.8
license:             BSD3
license-file:        LICENSE

extra-source-files:
  CHANGELOG.md
  LICENSE

source-repository head
  type:              git
  location:          https://github.com/silkapp/rest.git

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Rest.Types.Container
    Rest.Types.Container.Resource
    Rest.Types.Error
    Rest.Types.Info
    Rest.Types.Method
    Rest.Types.Range
    Rest.Types.ShowUrl
    Rest.Types.Void
  build-depends:
      base >= 4.6 && < 4.12
    , aeson >= 0.7 && < 1.4
    , base-compat >= 0.8 && < 0.10
    , case-insensitive >= 1.2 && < 1.3
    , generic-aeson >= 0.1 && < 0.3
    , hxt >= 9.2 && < 9.4
    , json-schema >= 0.6 && < 0.8
    , generic-xmlpickler >= 0.1.0.1 && < 0.2
    , rest-stringmap == 0.2.*
    , text >= 0.11 && < 1.3
    , uuid >= 1.2 && < 1.4
