name:                rest-wai
version:             0.1.0.7
description:         Rest driver for WAI applications.
synopsis:            Rest driver for WAI applications.
maintainer:          code@silk.co
category:            Web
build-type:          Simple
cabal-version:       >= 1.8
license:             BSD3
license-file:        LICENSE

extra-source-files:
  CHANGELOG.md
  LICENSE

source-repository head
  type:              git
  location:          https://github.com/silkapp/rest.git

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:   Rest.Driver.Wai
  build-depends:
      base == 4.*
    , bytestring == 0.10.*
    , case-insensitive == 1.2.*
    , containers >= 0.4 && < 0.6
    , http-types == 0.8.*
    , mime-types == 0.1.*
    , mtl >= 2.0 && < 2.3
    , rest-core == 0.35.*
    , text >= 0.11 && < 1.3
    , unordered-containers == 0.2.*
    , wai >= 2.1 && < 3.1
