name: restexample-client
version: 0.1.1.1
cabal-version: >=1.8
build-type: Simple
license: AllRightsReserved

library
    exposed-modules:
        Restexample.Client.Post
        Restexample.Client.Post.Comment
        Restexample.Client.Test
        Restexample.Client.Test.FooBar
        Restexample.Client.Test.Import
        Restexample.Client.User
    build-depends:
        base ==4.*,
        rest-types ==1.14.*,
        rest-client ==0.5.*,
        text >=0.10 && <1.3,
        rest-example ==0.2.*,
        rest-stringmap ==0.2.*
    hs-source-dirs: src

