cabal-version: >=1.8
name: restexample-client
version: 0.1.1.1
license: AllRightsReserved
build-type: Simple

library
    exposed-modules:
        Restexample.Client.Post
        Restexample.Client.Post.Comment
        Restexample.Client.Test
        Restexample.Client.Test.FooBar
        Restexample.Client.Test.Import
        Restexample.Client.User
    hs-source-dirs: src
    build-depends:
        base ==4.*,
        rest-types ==1.14.*,
        rest-client ==0.5.*,
        text >=0.10 && <1.3,
        rest-example ==0.2.*,
        rest-stringmap ==0.2.*
